--- a/Translation/Languages/ru/starsector-core/starfarer.api.jar.translation.json
+++ b/Translation/Languages/ru/starsector-core/starfarer.api.jar.translation.json
@@ -1345,7 +1345,7 @@
   "unrecovered Domain-era technology in this system. No one else can see it! ": "огромные залежи потерянных технологий. И никто о них не знает! ",
   "All I ask is,\" ": "Всё, о чём я прошу,\" ",
   " voice drops to a whisper, ": " переходит на шёпот, ",
-  "\"you retrieve for me the AI core hidden in the midst of the trove. ": \"это чтобы вы передали мне Ядро ИИ, спрятанное в том хранилище. ",
+  "\"you retrieve for me the AI core hidden in the midst of the trove. ": "\"это чтобы вы передали мне Ядро ИИ, спрятанное в том хранилище. ",
   "That, I get to keep. I’ll tell you exactly where to look if you agree to my terms.\"": "Его я оставлю себе. Если вы согласны, я скажу вам, где конкретно искать.\"",
   "Accept and promise to ship the AI core to the given address in a specially shielded crate": "Согласиться и пообещать доставить Ядро ИИ по указанному адресу в специальном экранированном контейнере",
   "Decline ": "Отклонить ",
